--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,12 @@
 version: "3"
 services:
   hapi-fhir-jpaserver-start:
-    build: .
-    container_name: hapi-fhir-jpaserver-start
+    image: chroniccare/ecp-sds-hardfork-cc:latest
+    container_name:  ecp-sds-hardfork-cc
     restart: on-failure
     ports:
       - "8080:8080"
-  hapi-fhir-postgres:
-    image: postgres:13-alpine
-    container_name: hapi-fhir-postgres
-    restart: always
-    environment:
-      POSTGRES_DB: "hapi"
-      POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "admin"
-    volumes:
-      - hapi-fhir-postgres:/var/lib/postgresql/data
-volumes:
-  hapi-fhir-postgres:
+  web:
+    image: chroniccare/introspect 
+    ports:
+      - "8181:8181"
