--- a/introspect-proxy/docker-compose.yml
+++ b/introspect-proxy/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
   web:
-    image: introspect 
+    image: chroniccare/introspect:latest 
     ports:
       - "8181:8181"
