--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,13 @@
 #Adds the option to go to eg. http://localhost:8080/actuator/health for seeing the running configuration
 #see https://docs.spring.io/spring-boot/docs/current/reference/html/actuator.html#actuator.endpoints
+
+logging:
+  level:
+    root: INFO
+    org.springframework: OFF
+    ca.uhn.fhir: INFO
+    ca.uhn.fhir.jpa : OFF
+
 sds:
   require-base-url: false
   partition:
@@ -18,17 +26,22 @@ spring:
   security:
     oauth2:
       resourceserver:
+        # opaque-token:
+        #   introspection-uri: http://localhost:8181/my-introspect-proxy
+        # opaque:
+        #   introspection-uri: http://localhost:8181/my-introspect-proxy
+
         opaque-token:
-          introspection-uri: https://my-foo-ehr.org/oauth2/introspect
+          introspection-uri: http://host.docker.internal:8181/my-introspect-proxy
         opaque:
-          introspection-uri: https://my-bar-ehr.org/oauth2/introspect
+          introspection-uri: http://host.docker.internal:8181/my-introspect-proxy
   flyway:
     enabled: false
     check-location: false
     baselineOnMigrate: true
   datasource:
-    url: 'jdbc:h2:file:./target/database/h2'
-    #url: jdbc:h2:mem:test_mem
+    # url: 'jdbc:h2:file:./target/database/h2'
+    url: jdbc:h2:mem:test_mem
     username: sa
     password: null
     driverClassName: org.h2.Driver
